--- a/LoHo_Web/accounts/templates/account/profile.html
+++ b/LoHo_Web/accounts/templates/account/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-{% load staticfiles %}
+{% load static %}
 
 <div class="row">
   <div class="col-xs-6 col-md-3">
