--- a/LoHo_Web/accounts/templates/socialaccount/snippets/provider_list.html
+++ b/LoHo_Web/accounts/templates/socialaccount/snippets/provider_list.html
@@ -1,5 +1,19 @@
 {% load socialaccount %}
 
+{% load static %}
+
+{% static 'accounts/img/naver.png' as naver_button %}
+{% static 'accounts/img/kakao.png' as kakao_button %}
+{% static 'accounts/img/facebook.png' as facebook_button %}
+
+{% block css %}
+<style>
+  img:hover {
+    filter: brightness(0.8);
+  }
+</style>
+{% endblock%}
+
 {% get_providers as socialaccount_providers %}
 
 {% for provider in socialaccount_providers %}
@@ -13,8 +27,15 @@
 </li>
 {% endfor %}
 {% endif %}
-<li>
+<li style="list-style: none;">
   <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
+     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+    {% if provider.name == 'Naver' %}
+    <img src="{{ naver_button }}" height="50" alt="네이버 로그인">
+    {% elif provider.name == 'Kakao' %}
+    <img src="{{ kakao_button }}" height="50" alt="카카오 로그인">
+    {% elif provider.name == 'Facebook' %}
+    <img src="{{ facebook_button }}" height="50" alt="페이스북 로그인">
+    {% endif %}</a>
 </li>
 {% endfor %}
