--- a/LoHo_Web/articles/templates/articles/index.html
+++ b/LoHo_Web/articles/templates/articles/index.html
@@ -1,9 +1,58 @@
 {% extends 'base.html' %}
 
+{% block css %}
+<style>
+  
+  @media (min-width: 768px) {
+    .carousel {
+      display: none;
+    }
+  }
+</style>
+{% endblock %}
+
 {% block content %}
 
-{% for article in articles %}
-{{article.title}}
-{% endfor %}
+<div id="carouselExampleIndicators" class="carousel slide mb-3" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner rounded-lg">
+    <div class="carousel-item active">
+      <img src="https://picsum.photos/1200/600" class="d-block w-100" alt="이미지">
+    </div>
+    <div class="carousel-item">
+      <img src="https://picsum.photos/1200/600" class="d-block w-100" alt="이미지">
+    </div>
+    <div class="carousel-item">
+      <img src="https://picsum.photos/1200/600" class="d-block w-100" alt="이미지">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<div class="container">
+  <div class="row">
+    {% for article in articles %}
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-3">
+      <img src="https://picsum.photos/200/100" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{article.title}}</h5>
+        <p class="card-text">간단한 내용입니다.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
 
 {% endblock %}
