--- a/LoHo_Web/templates/base.html
+++ b/LoHo_Web/templates/base.html
@@ -47,6 +47,20 @@
       </nav>
     {% block content %}
     {% endblock %}
+    <footer class="w-100 bg-dark" style="height: 50px;">
+      <div class="container">
+        <div class="row text-light">
+          <div class="col-12 col-md-6">
+            <h5 class="mb-0">고객센터</h5>
+          </div>
+          <div class="col-12 col-md-6">
+            <h5 class="mb-0">LoHo 제휴문의</h5>
+          </div>
+        </div>
+      </div>
+
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
