--- a/LoHo_Web/articles/templates/articles/index.html
+++ b/LoHo_Web/articles/templates/articles/index.html
@@ -1,16 +1,5 @@
 {% extends 'base.html' %}
 
-{% block css %}
-<style>
-  
-  @media (min-width: 768px) {
-    .carousel {
-      display: none;
-    }
-  }
-</style>
-{% endblock %}
-
 {% block content %}
 
 <div id="carouselExampleIndicators" class="carousel slide mb-3" data-ride="carousel">
@@ -44,10 +33,10 @@
   <div class="row">
     {% for article in articles %}
     <div class="card col-12 col-sm-6 col-md-4 col-lg-3">
-      <img src="https://picsum.photos/200/100" class="card-img-top" alt="...">
+      <img src="{{article.image.url}}" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">{{article.title}}</h5>
-        <p class="card-text">간단한 내용입니다.</p>
+        <p class="card-text">{{article.content}}</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
