--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -8,36 +8,37 @@
 
 
 {% block content %}
-<div id="mainCarouselIndicators" class="carousel slide m-3" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#mainCarouselIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#mainCarouselIndicators" data-slide-to="1"></li>
-    <li data-target="#mainCarouselIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner rounded">
-    <div class="carousel-item active">
-      <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
+<div class="container pt-3">
+  <div id="mainCarouselIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#mainCarouselIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#mainCarouselIndicators" data-slide-to="1"></li>
+      <li data-target="#mainCarouselIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner rounded">
+      <div class="carousel-item active">
+        <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
+      </div>
+      <a class="carousel-control-prev" href="#mainCarouselIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#mainCarouselIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <div class="carousel-item">
-      <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
-    </div>
-    <a class="carousel-control-prev" href="#mainCarouselIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#mainCarouselIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
-</div>
-<div class="container">
+
   <div class="row my-4 my-lg-5 ">
     <div class="subtitle col-12">카테고리 <img class="next-arrow" src="{% static 'articles/img/next-arrow.png' %}" alt="카테고리로 이동"></div>
-    <div class="col-12 d-flex justify-content-between mx-0 p-0">
+    <div class="col-12 d-flex justify-content-between">
       <a href="."><img class="category-item" src="{% static 'articles/img/스포츠.png' %}" alt="스포츠"></a>
       <a href="."><img class="category-item" src="{% static 'articles/img/이색체험.png' %}" alt="이색체험"></a>
       <a href="."><img class="category-item" src="{% static 'articles/img/쿠킹.png' %}" alt="쿠킹"></a>
@@ -47,22 +48,24 @@
     </div>
   </div>
   <hr class="devide">
-  <div class="row my-4 my-lg-5">
+  <div class="row my-4 my-lg-5 mx-2">
     <div class="subtitle col-12">이런 취미 어때요?</div>
-    <div class="row row-cols-3 row-cols-md-4">
+    <div class="row row-cols-2 row-cols-md-4">
       {% for article in articles %}
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="{{article.image.url}}" class="card_img card-img-top" alt="활동 이미지">
-          <div class="card-body">
-            <small>{{ article.category }}</small>
-            <h5 class="card-title">{{ article.title }}</h5>
-            <small class="card-text">{{ article.men_applicant }}/{{ article.participation }}  {{ article.men_applicant }}/{{ article.participation }}</small>
-            <br>
-            <small>{{ article.price }}</small>
-            <br>
-            <small>{{ article.event_date }}</small>
-          </div>
+        <div class="card">
+          <a href="{% url 'articles:detail' article.pk %}"><img src="{{article.image.url}}" class="card-img-top" alt="활동 이미지"></a>
+          <a href="{% url 'articles:detail' article.pk %}" class="text-reset text-decoration-none">
+            <div class="card-body">
+              <small>{{ article.category }}</small>
+              <h5 class="card-title"><strong>{{ article.title }}</strong></h5>
+              <small class="card-text">{{ article.men_applicant }}/{{ article.participation }}  {{ article.men_applicant }}/{{ article.participation }}</small>
+              <br>
+              <small>{{ article.price }}원</small>
+              <br>
+              <small>{{ article.event_date }}</small>
+            </div>
+          </a>
         </div>
       </div>
       {% endfor %}
