--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
   {% endblock %}
 </head>
 <body>
+  <div class="nav-out"></div>
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand ml-5 mt-2" href="{% url 'articles:index' %}"><img src="{% static 'articles/img/Logo.png' %}" alt="로고이미지" height="30px"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +66,6 @@
         </div>
       </div>
     </div>
-
   </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
