--- a/articles/templates/articles/article_upload.html
+++ b/articles/templates/articles/article_upload.html
@@ -13,7 +13,7 @@
   {% csrf_token %}
 
   {{form.media}}
-  {%bootstrap_form form%}
+  {{form.as_p}}
   <input type="submit" value="작성 완료">
 </form>
 
