--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load humanize %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'articles/css/detail.css' %}">
@@ -10,25 +11,79 @@
 {% block content %}
 <div class="container">
   <div class="row">
-    <div class="col-12 col-md-9 d-flex flex-column align-items-center">
-      <img class="article-image" src="{{ article.image.url }}" alt="활동 이미지">
-      <h5>{{ article.category }}</h5>
-      <h3>{{ article.title }}</h3>
+    <div class="col-12 col-md-9">
+      <div class="row">
+        <div class="col-12 d-flex flex-column align-items-center">
+          <img class="article-image" src="{{ article.image.url }}" alt="활동 이미지">
+          <h5 class="my-3 font-weight-bold">{{ article.category }}</h5>
+          <h3 class="mb-3 extrabold">{{ article.title }}</h3>
+        </div>
+      </div>
+      <hr class="ml-0">
+      <div class="row">
+        <div class="col-2 extrabold">
+          <p>상세정보</p>
+        </div>
+        <div class="col-10 content">
+          <p>날짜: {{ article.event_date }}</p>
+          <p>장소: 위치위치</p>
+          <p>참여인원: 남/여 각 {{ article.participation }}명</p>
+        </div>
+      </div>
+      <hr class="ml-0">
+      <div class="row">
+        <div class="col-12 extrabold">
+          <p>호스트 소개</p>
+        </div>
+        <div class="col-2 d-flex flex-column align-items-center">
+          <div class="host-photo rounded-circle" style="background-image: url({{ article.author.profile.profile_photo.url }});"></div>
+          <p class="content">{{ article.author }}</p>
+        </div>
+        <div class="col-10 content">
+          <p>{{ article.author.profile.host_introduce }}</p>
+        </div>
+        <div class="col-12 extrabold content">
+          <p>경력사항</p>
+        </div>
+        <div class="col-12 content">
+          <p>{{ article.author.profile.host_career|linebreaksbr }}</p>
+        </div>
+      </div>
+      <hr class="ml-0">
+      <div class="row">
+        <div class="col-12 extrabold">
+          <p>Hobby 소개</p>
+        </div>
+        <div class="col-12 content">
+          <p>{{ article.content }}</p>
+        </div>
+        <div class="col-12 extrabold subtitle">
+          <p>대상</p>
+        </div>
+        <div class="col-12 content">
+          <p> - Lorem ipsum dolor sit amet consectetur, <br> - adipisicing elit. Minima, ex laboriosam </p>
+        </div>
+        <div class="col-12 extrabold subtitle">
+          <p>일정</p>
+        </div>
+        <div class="col-12 content">
+          <p> 1. Lorem ipsum dolor sit amet consectetur, <br> 2. adipisicing elit. Minima, ex laboriosam </p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-2 font-weight-bold">
-      <p>상세정보</p>
+    <div class="d-none d-md-block col-md-3 article-sidebar">
+      <p class="sidebar-title">참가비</p>
+      <p class="extrabold sidebar-content">{{ article.price|intcomma }}원</p>
+      <br>
+      <p class="sidebar-title">모임 날짜</p>
+      <p class="extrabold sidebar-content">{{ article.event_date|date:"n월 d일" }}</p>
+      <br>
+      <p class="sidebar-title">현재 참여인원</p>
+      <p><span class="extrabold sidebar-content man-color">남 {{ article.man_count }}</span> <span class="sidebar-title">/{{ article.participation }}</span></p>
+      <p><span class="extrabold sidebar-content woman-color">여 {{ article.woman_count }}</span> <span class="sidebar-title">/{{ article.participation }}</span></p>
+      <br>
+      <button class="join-button">참여하기</button>
     </div>
-    <div class="col-10">
-      <p>날짜: {{ article.event_date }}</p>
-      <p>장소: 위치위치</p>
-      <p>참여인원: 각 {{ article.participation }}명</p>
-    </div>
-  </div>
-  <div class="d-none d-md-block col-md-3 article-sidebar">
-    <p>참가비</p>
-    <p>{{ article.price }}</p>
   </div>
 </div>
 {% endblock %}
