--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
   </nav>
   {% block content %}
   {% endblock %}
-  <footer class="w-100 bg-dark" style="height: 50px;">
+  <footer class="w-100 bg-dark mt-3" style="height: 50px;">
     <div class="container">
       <div class="row text-light">
         <div class="col-12 col-md-6">
