--- a/articles/templates/articles/article_upload.html
+++ b/articles/templates/articles/article_upload.html
@@ -9,8 +9,9 @@
 {{ form.media }}            {# Adds date-picker required JS and CSS #}
 {% bootstrap_javascript jquery='full' %}  {# Embed Bootstrap JS+jQuery #}
 
-<form action="." method="POST" enctype="multipart/form-data">
+<form action="" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
+  <input type="hidden" name="action" value="{%if article %}update{%else%}create{%endif%}">
 
   {{form.media}}
   {{form.as_p}}
