--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load bootstrap4 %}
 {% load humanize %}
 
 {% block css %}
@@ -61,13 +62,40 @@
           <p>대상</p>
         </div>
         <div class="col-12 content">
-          <p> - Lorem ipsum dolor sit amet consectetur, <br> - adipisicing elit. Minima, ex laboriosam </p>
+          <p>{{ article.to_who|linebreaksbr }}</p>
         </div>
         <div class="col-12 extrabold subtitle">
-          <p>일정</p>
+          <p>상세 일정</p>
         </div>
         <div class="col-12 content">
-          <p> 1. Lorem ipsum dolor sit amet consectetur, <br> 2. adipisicing elit. Minima, ex laboriosam </p>
+          <p>{{ article.detail_plan|linebreaksbr }}</p>
+        </div>
+      </div>
+      <hr class="ml-0">
+      <div class="row">
+        <div class="col-12 extrabold">
+          <p>리뷰({{ article.comments.count }}개)</p>
+          <p>{% if comments_rank_avg %}{{ comments_rank_avg }}점{% endif %}</p>
+        </div>
+        {% for comment in article.comments.all %}
+        <div class="col-2 d-flex flex-column align-items-center">
+          <div class="host-photo rounded-circle" style="background-image: url({{ comment.author.profile.profile_photo.url }});"></div>
+          <p class="content">{{ comment.author }}</p>
+        </div>
+        <div class="col-10 content">
+          <p>{{ comment.content }}</p>
+        </div>
+        {% empty %}
+        <div class="col-12 content">
+          <p>댓글이 없습니다.</p>
+        </div>
+        {% endfor %}
+        <div class="col-12 content">
+          <form action="{% url 'articles:comment_upload' article.pk %}" method="POST">
+            {% csrf_token %}
+            {% bootstrap_form comment_form %}
+            <button class="join-button">댓글 작성</button>
+          </form>
         </div>
       </div>
     </div>
