--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -79,7 +79,7 @@
         </div>
         {% for comment in article.comments.all %}
         <div class="col-2 d-flex flex-column align-items-center">
-          <div class="host-photo rounded-circle" style="background-image: url({{ comment.author.profile.profile_photo.url }});"></div>
+          <div class="host-photo rounded-circle" style="background-image: url({% if comment.author.profile.profile_photo %}{{ comment.author.profile.profile_photo.url }}{% else %}{% static 'accounts/img/수민사진.jpg' %}{% endif %});"></div>
           <p class="content">{{ comment.author }}</p>
         </div>
         <div class="col-10 content">
