--- a/articles/static/articles/css/detail.css
+++ b/articles/static/articles/css/detail.css
@@ -9,7 +9,7 @@
     padding: 1rem;
 }
 
-.host-photo {
+.profile-photo {
     width: 70%;
     padding-bottom: 70%;
     background-size: cover;
@@ -19,10 +19,6 @@
 .content {
     font-size: 0.8rem;
     font-weight: bold;
-}
-
-.extrabold {
-    font-weight: 800;
 }
 
 .subtitle {
