--- a/articles/static/articles/css/index.css
+++ b/articles/static/articles/css/index.css
@@ -1,9 +1,3 @@
-.subtitle {
-    font-weight: bold;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-}
-
 .next-arrow {
     height: 1.5rem;
 }
@@ -18,6 +12,7 @@
 
 .devide {
     border: #cccccc 1px solid;
+    background-color: #cccccc;
 }
 
 .loho-describe {
