--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -9,72 +9,73 @@
 
 
 {% block content %}
-<div class="container pt-3">
-  <div id="mainCarouselIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#mainCarouselIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#mainCarouselIndicators" data-slide-to="1"></li>
-      <li data-target="#mainCarouselIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner rounded">
-      <div class="carousel-item active">
-        <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
-      </div>
-      <a class="carousel-control-prev" href="#mainCarouselIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#mainCarouselIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+<div id="mainCarouselIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#mainCarouselIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#mainCarouselIndicators" data-slide-to="1"></li>
+    <li data-target="#mainCarouselIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner rounded">
+    <div class="carousel-item active">
+      <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
     </div>
+    <div class="carousel-item">
+      <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'articles/img/carousel-img.png' %}" class="d-block w-100" alt="이미지">
+    </div>
+    <a class="carousel-control-prev" href="#mainCarouselIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#mainCarouselIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
+</div>
 
-  <div class="row my-4 my-lg-5 mx-2">
-    <div class="subtitle col-12">카테고리 <img class="next-arrow" src="{% static 'articles/img/next-arrow.png' %}" alt="카테고리로 이동"></div>
-    <div class="col-12 d-flex justify-content-between">
-      <a href="."><img class="category-item" src="{% static 'articles/img/스포츠.png' %}" alt="스포츠"></a>
-      <a href="."><img class="category-item" src="{% static 'articles/img/이색체험.png' %}" alt="이색체험"></a>
-      <a href="."><img class="category-item" src="{% static 'articles/img/쿠킹.png' %}" alt="쿠킹"></a>
-      <a href="."><img class="category-item" src="{% static 'articles/img/예술.png' %}" alt="예술"></a>
-      <a href="."><img class="category-item" src="{% static 'articles/img/관람.png' %}" alt="관람"></a>
-      <a href="."><img class="category-item" src="{% static 'articles/img/기타.png' %}" alt="기타"></a>
-    </div>
+<div class="row my-4 my-lg-5 mx-2">
+  <div class="subtitle col-12">카테고리 <img class="next-arrow" src="{% static 'articles/img/next-arrow.png' %}" alt="카테고리로 이동"></div>
+  <div class="col-12 d-flex justify-content-between">
+    <a href="{% url 'articles:category_list' '스포츠' %}"><img class="category-item" src="{% static 'articles/img/스포츠.png' %}" alt="스포츠"></a>
+    <a href="{% url 'articles:category_list' '이색체험' %}"><img class="category-item" src="{% static 'articles/img/이색체험.png' %}" alt="이색체험"></a>
+    <a href="{% url 'articles:category_list' '쿠킹' %}"><img class="category-item" src="{% static 'articles/img/쿠킹.png' %}" alt="쿠킹"></a>
+    <a href="{% url 'articles:category_list' '예술' %}"><img class="category-item" src="{% static 'articles/img/예술.png' %}" alt="예술"></a>
+    <a href="{% url 'articles:category_list' '관람' %}"><img class="category-item" src="{% static 'articles/img/관람.png' %}" alt="관람"></a>
+    <a href="{% url 'articles:category_list' '기타' %}"><img class="category-item" src="{% static 'articles/img/기타.png' %}" alt="기타"></a>
   </div>
-  <hr class="devide">
-  <div class="row my-4 my-lg-5 mx-2">
-    <div class="subtitle col-12">이런 취미 어때요?</div>
-    <div class="row row-cols-2 row-cols-md-4">
-      {% for article in articles %}
-      {% if forloop.counter < 5 %}
-      <div class="col mb-4">
+</div>
+<hr class="devide">
+<div class="row my-4 my-lg-5 mx-2">
+  <div class="subtitle col-10">이런 취미 어때요?</div>
+  <div class="subtitle col-2 d-flex justify-content-end"><a href="{% url 'articles:category_list' 'all' %}">전체보기</a></div>
+  {% for article in articles %}
+  {% if forloop.counter < 5 %}
+    <div class="col-3">
+      <div class="mb-4">
         <div class="card">
           <a href="{% url 'articles:detail' article.pk %}"><img src="{{article.image.url}}" class="card-img-top" alt="활동 이미지"></a>
           <a href="{% url 'articles:detail' article.pk %}" class="text-reset text-decoration-none">
             <div class="card-body">
               <small>{{ article.category }}</small>
               <h5 class="card-title"><strong>{{ article.title }}</strong></h5>
-              <small class="card-text"><span class="man-color">{{ article.man_participations_count }}/{{ article.participations }}</span>  <span class="woman-color">{{ article.woman_participations_count }}/{{ article.participations }}</span></small>
+              <small class="card-text"><span
+                  class="man-color">{{ article.man_participations_count }}/{{ article.participations }}</span> <span
+                  class="woman-color">{{ article.woman_participations_count }}/{{ article.participations }}</span></small>
               <br>
               <small>{{ article.price|intcomma }}원 {{ article.event_date|date:"n월 d일" }}</small>
             </div>
           </a>
         </div>
       </div>
-      {% endif %}
-      {% endfor %}
     </div>
-  </div>
-  <hr class="devide">
-  <img class="loho-describe" src="{% static 'articles/img/LoHo설명.png' %}" alt="">
+  {% endif %}
+  {% endfor %}
 </div>
+<hr class="devide">
+<img class="loho-describe" src="{% static 'articles/img/LoHo설명.png' %}" alt="">
 
 
 {% endblock %}
