--- a/templates/base.html
+++ b/templates/base.html
@@ -13,59 +13,29 @@
   {% endblock %}
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand ml-5 mt-2" href="{% url 'articles:index' %}"><img src="{% static 'articles/img/Logo.png' %}" alt="로고이미지" height="30px"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <form class="search-form form-inline mt-2 mb-2 mb-lg-0 offset-lg-1 col-lg-6">
-        <input class="search-input col-lg-12" type="search" aria-label="Search">
-        <button class="search-icon"><img src="{% static 'articles/img/search-icon.png'%}" alt="검색 아이콘" width="20px"></button>
-      </form>
-      <div class="col-lg-5 d-lg-flex justify-content-end">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">호스트 신청 <span class="sr-only">(current)</span></a>
-          </li>
-          {% if user.is_active %}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              {{ user.username }}
-            </a>
-            <div class="dropdown-menu w-25" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'profile' user.pk %}">내 정보</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{% url 'account_logout' %}">로그아웃</a>
+<div class="wrap container">
+  {% include '_nav.html' %}
+  <div class="container">
+    {% block content %}
+    {% endblock %}
+  </div>
+  <div class="container">
+    <div class="row">
+      <footer class="">
+        <div class="container">
+          <div class="row text-light">
+            <div class="col-12 col-md-6">
+              <h5 class="mb-0">고객센터</h5>
             </div>
-          </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">고객센터</a>
-          </li>
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_login' %}">로그인</a>
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-    </div>
-  </nav>
-  {% block content %}
-  {% endblock %}
-  <footer class="w-100 bg-dark mt-3" style="height: 50px;">
-    <div class="container">
-      <div class="row text-light">
-        <div class="col-12 col-md-6">
-          <h5 class="mb-0">고객센터</h5>
+            <div class="col-12 col-md-6">
+              <h5 class="mb-0">LoHo 제휴문의</h5>
+            </div>
+          </div>
         </div>
-        <div class="col-12 col-md-6">
-          <h5 class="mb-0">LoHo 제휴문의</h5>
-        </div>
-      </div>
+      </footer>
     </div>
-  </footer>
+  </div>
+</div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
