--- a/articles/static/articles/css/base.css
+++ b/articles/static/articles/css/base.css
@@ -82,6 +82,16 @@ footer {
 
 .subtitle {
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-bottom: 1rem;
+}
+
+.link-button {
+    color: #ffb6c1;
+}
+
+.link-button:hover {
+    color: #ffb6c1;
+    filter: brightness(1.2);
+    text-decoration: none;
 }
