--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -10,6 +10,13 @@
 
 
 {% block content %}
+{% if messages %}
+  {% for message in messages %}
+  <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %} alert-info {% endif %}" role="alert">
+    {{ message }}
+  </div>
+  {% endfor %}
+{% endif %}
 <div class="row">
   <div class="col-12 col-md-9">
     <div class="row">
@@ -78,7 +85,7 @@
       </div>
       {% for comment in article.comments.all %}
       <div class="col-2 d-flex flex-column align-items-center">
-        <div class="host-photo rounded-circle" style="background-image: url({% if comment.author.profile.profile_photo %}{{ comment.author.profile.profile_photo.url }}{% else %}{% static 'accounts/img/수민사진.jpg' %}{% endif %});"></div>
+        <div class="profile-photo rounded-circle" style="background-image: url({% if comment.author.profile.profile_photo %}{{ comment.author.profile.profile_photo.url }}{% else %}{% static 'accounts/img/anonymoususer.png' %}{% endif %});"></div>
         <p class="content">{{ comment.author }}</p>
       </div>
       <div class="col-10 content">
@@ -89,6 +96,7 @@
         <p>댓글이 없습니다.</p>
       </div>
       {% endfor %}
+      {% if request.user in article.man_participations.all or request.user in article.woman_participations.all %}
       <div class="col-12 content">
         <form action="{% url 'articles:comment_upload' article.pk %}" method="POST">
           {% csrf_token %}
@@ -96,6 +104,7 @@
           <button class="join-button">댓글 작성</button>
         </form>
       </div>
+      {% endif %}
     </div>
   </div>
   <div class="d-none d-md-block col-md-3 article-sidebar">
@@ -109,17 +118,11 @@
     <p><span class="extrabold sidebar-content man-color">남 {{ article.man_participations_count }}</span> <span class="sidebar-title">/{{ article.participations }}</span></p>
     <p><span class="extrabold sidebar-content woman-color">여 {{ article.woman_participations_count }}</span> <span class="sidebar-title">/{{ article.participations }}</span></p>
     <br>
-    <form action="{% if request.user.profile.gender == '남' %}{% url 'articles:man_participation' article.pk %}{% else %}{% url 'articles:woman_participation' article.pk %}{% endif %}" method="POST"><form action="{% if request.user.profile.gender == '남' %}{% url 'articles:man_participation' article.pk %}{% else %}{% url 'articles:woman_participation' article.pk %}{% endif %}" method="POST">
+    <form action="{% if not request.user.profile %}{% url 'profile_update' %}{% elif request.user.profile.gender == '남' %}{% url 'articles:man_participation' article.pk %}{% else %}{% url 'articles:woman_participation' article.pk %}{% endif %}" method="POST"><form action="{% if request.user.profile.gender == '남' %}{% url 'articles:man_participation' article.pk %}{% else %}{% url 'articles:woman_participation' article.pk %}{% endif %}" method="POST">
       {% csrf_token %}
       <button class="join-button">참가하기</button>
     </form>
-    {% if messages %}
-    <ul class="messages">
-      {% for message in messages %}
-      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %}
+    
   </div>
 </div>
 {% endblock %}
