--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -13,7 +13,7 @@
       <div class="col-lg-5 d-lg-flex justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">디렉터 신청</a>
+            <a class="nav-link" href="http://pf.kakao.com/_BpDWxb">디렉터 신청</a>
           </li>
           {% if user.is_active %}
           <li class="nav-item dropdown">
@@ -33,7 +33,7 @@
           </li>
           {% endif %}
           <li class="nav-item">
-            <a class="nav-link" href="#">고객센터</a>
+            <a class="nav-link" href="http://pf.kakao.com/_BpDWxb">문의하기</a>
           </li>
         </ul>
       </div>
